clang/test/BSC/Negative/Trait/GenericTrait/use_undefined_trait2/use_undefined_trait2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> { // expected-note {{declared here}}
  T foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

_Impl _Trait F<int> for int;

int main() {
  int a = 1;
  _Trait F* f = (_Trait F*)&a; // expected-error {{template 'F' cannot be referenced with a _Trait specifier}}
  return f->foo(); // expected-error {{use of undeclared identifier 'f'}}
}